plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.sonarqube' version '7.0.1.6134'
	id 'jacoco'
}

group = 'com.innowise'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2025.1.2")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
	implementation 'org.springframework.cloud:spring-cloud-starter-gateway-server-webflux'
	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'io.projectreactor:reactor-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-webflux'

	testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock:4.3.1'
	testImplementation 'org.testcontainers:testcontainers:1.21.0'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.0'
	testImplementation 'org.apache.httpcomponents.client5:httpclient5'

}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test', Test) {
	useJUnitPlatform()
	maxParallelForks = 1
	finalizedBy 'jacocoTestReport'
}

jacoco {
	toolVersion = "0.8.12"
}

tasks.named('jacocoTestReport', JacocoReport) {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		html.required = true
	}
}

sonar {
	properties {
		property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
	}
}